<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RegisterApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="log">Login</string>
    <string name="reg">Register</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="typeusername">Type Username</string>
    <string name="typeuser">Type Username</string>
    <string name="typepass">Type Password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="message">...</string>

</resources>
