<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.registerapp.SecondActivity" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/typeuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/typeuser"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/typeusertext"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/typepass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/typepass"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/typepasstext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" 
            android:onClick="save"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" 
            android:onClick="cancel"/>

    </LinearLayout>

</RelativeLayout>
